<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.vadiwoo.cs496_androidui.grid_view">

    <GridLayout
        android:layout_width="363dp"
        android:layout_height="555dp"
        tools:layout_editor_absoluteY="24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_element"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="277dp"
            tools:layout_editor_absoluteY="-2dp" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_element"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="207dp"
            tools:layout_editor_absoluteY="6dp" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_element"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="6dp" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourth_element"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="93dp"
            tools:layout_editor_absoluteY="6dp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifth_element"
            android:textAlignment="center"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="6dp" />
    </GridLayout>

</android.support.constraint.ConstraintLayout>