<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vadiwoo.cs496_androidui.MainActivity"
    android:background="#b3e5fc">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:text="@string/title" />

    <Button
        android:id="@+id/horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="96dp"
        android:text="@string/horizontal_button"
        app:layout_constraintBottom_toTopOf="@+id/verticle"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/verticle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/vertical_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toTopOf="@+id/grid"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="96dp" />

    <Button
        android:id="@+id/grid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/grid_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verticle"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/relative"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="96dp" />

    <Button
        android:id="@+id/relative"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/relative_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grid"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="96dp" />


</android.support.constraint.ConstraintLayout>
